# task_system

./: CMakeLists.txt  Readme.md
googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/task_system/: queue_per_thread.hpp  scheduler.hpp  typical_task_system.hpp  work_stealing_scheduler.hpp
unit_tests/: CMakeLists.txt  gtestmain.cpp  tast_system_tests.cpp
